shows all chats and users and when a user disconnects, that user is removed and no longer visible.

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -1,6 +1,4 @@
-p{
-    color: red;
-}
+
 
 #response{
     background-color: yellow;
